--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,12 @@
   <body>
     <h1>Here should be the week Number</h1>
     <form action="" method="POST">
-      <label for="headerInput"></label>
+      <label for="headerInput">Input header</label>
       <input type="text" id="headerInput" name="headerInput" />
-      <label for="bodyInput"></label>
+      <label for="bodyInput">Input text</label>
       <textarea name="bodyInput" id="bodyInput" cols="30" rows="10"></textarea>
+      <label for="tagInput">Input tags</label>
+      <input type="text" id="tagInput" name="tagInput" />
       <button type="submit"></button>
     </form>
   </body>
