--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
       <label for="tagInput">Input tags</label>
       <input type="text" id="tagInput" name="tagInput" />
       <button type="submit">submit</button>
+      <button type="button" id="TESTBUTTON">TEST</button>
     </form>
     <ul>
       <% notes.forEach(note => { %> <% if(note.weekNumber ===
