--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notewood</title>
+    <%- include('./partials/head.ejs') %>
   </head>
+
   <body>
-    <h1>Here should be the week Number</h1>
+    <%- include('./partials/header.ejs') %>
+
     <form action="/newNote" method="POST">
       <label for="headerInput">Input header</label>
       <input type="text" id="headerInput" name="headerInput" />
@@ -30,5 +29,6 @@
       </li>
       <% }}) %>
     </ul>
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
