--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,4 +3,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Notewood</title>
 <link rel="stylesheet" href="styles/styles.css" />
-<script src="js/main.js"></script>
+<script src="js/main.js" type="module" defer></script>
