add archive page

--- a/views/note.ejs
+++ b/views/note.ejs
@@ -12,32 +12,34 @@
         <div>BODY: <%= notes.bodyInput %></div>
         <div>TAGS: <%= notes.tagInput %></div>
         <div><%= notes.weekNumber %></div>
-        <button class="modal-button">Edit</button>
+        <button class="open-modal">Edit</button>
         <a href="/note/remove/<%= notes._id %>">Remove</a>
         <a href="/currentWeek">get back</a>
       </li>
-
-      <div class="modal">
-        <form action="/note/<%= notes._id %>?_method=PUT" method="POST">
-          <label for="headerInput">Input header</label>
-          <input type="text" id="headerInput" name="headerInput" placeholder="<%= notes.headerInput%>"/>
-          <label for="bodyInput">Input text</label>
-          <textarea
-            name="bodyInput"
-            id="bodyInput"
-            cols="30"
-            rows="10"
-            placeholder="<%= notes.bodyInput%>"
-          ></textarea>
-          <label for="tagInput">Input tags</label>
-          <input type="text" id="tagInput" name="tagInput" />
-          <button type="submit">submit</button>
-          <button type="button" class="close">cancel</button>
-        </form>
-      </div>
-    </li>
-
     </ul>
+    <dialog class="modal">
+      <form action="/note/<%= notes._id %>?_method=PUT" method="POST">
+        <label for="headerInput">Input header</label>
+        <input
+          type="text"
+          id="headerInput"
+          name="headerInput"
+          placeholder="<%= notes.headerInput%>"
+        />
+        <label for="bodyInput">Input text</label>
+        <textarea
+          name="bodyInput"
+          id="bodyInput"
+          cols="30"
+          rows="10"
+          placeholder="<%= notes.bodyInput%>"
+        ></textarea>
+        <label for="tagInput">Input tags</label>
+        <input type="text" id="tagInput" name="tagInput" />
+        <button type="submit">submit</button>
+        <button type="button" class="close-modal">cancel</button>
+      </form>
+    </dialog>
 
     <%- include('./partials/footer.ejs') %>
   </body>
