--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,7 @@
 <header>
   <h1>LOGO</h1>
-
+  <a href="/">HOME</a>
+  <a href="/currentWeek">CURRENT</a>
+  <a href="/archive">ARCHIVE</a>
   <hr />
 </header>
