--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -6,7 +6,7 @@
 
   <body>
     <%- include('./partials/header.ejs') %>
-    <h2><%=`Week ${currentWeek}` %></h2>
+
     <button type="button" class="open-modal">Add new note</button>
     <dialog class="modal">
       <form action="/note/newNote" method="POST">
@@ -21,23 +21,19 @@
         ></textarea>
         <label for="tagInput">Input tags</label>
         <input type="text" id="tagInput" name="tagInput" />
-        <label for="weekNumber">Input date</label>
-        <input type="date" id="weekNumber" name="weekNumber" />
         <button type="submit">submit</button>
         <button type="button" class="close-modal">close modal</button>
       </form>
     </dialog>
-    <ul>
-      <li>TAGS: <% notes.forEach(note => { %> <%= note.tagInput %> <% }) %></li>
-    </ul>
 
     <ul>
-      <% notes.forEach(note => { %> <% if(note.weekNumber ===
-      Number(currentWeek)) {%>
+      <% groupedEmailsArray.forEach(note => { %>
+
+      <h2><%= `Week ${note.date}` %></h2>
+      <% for(let item of note.emails) { %>
       <li data-id="<%= note._id %>">
         <div>TITLE: <%= note.headerInput %></div>
         <div>TAGS: <%= note.tagInput %></div>
-        <div><%= note.weekNumber %></div>
         <a href="/note/<%= note._id%>">Go to note</a>
         <a href="/note/remove/<%= note._id %>">Remove</a>
       </li>
