--- a/views/targetWeek.ejs
+++ b/views/targetWeek.ejs
@@ -6,7 +6,7 @@
 
   <body>
     <%- include('./partials/header.ejs') %>
-    <h2><%=`Week ${currentWeek}` %></h2>
+    <h2><%=`Week ${targetWeek}` %></h2>
     <button type="button" class="open-modal">Add new note</button>
     <dialog class="modal">
       <form action="/note/newNote" method="POST">
@@ -33,7 +33,7 @@
 
     <ul>
       <% notes.forEach(note => { %> <% if(note.weekNumber ===
-      Number(currentWeek)) {%>
+      Number(targetWeek)) {%>
       <li data-id="<%= note._id %>">
         <div>TITLE: <%= note.headerInput %></div>
         <div>TAGS: <%= note.tagInput %></div>
