--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,11 @@
     <a href="/currentWeek"> Signup placeholder</a>
     <br />
     <a href="/currentWeek"> guest login placeholder</a>
-    <%- include('./partials/footer.ejs') %>
+    <% yearWeek.forEach((year) => { %> <% if(year === Number(currentWeek)) { %>
+    <a href="/currentWeek"> <%= year %></a>
+    <% } else { %>
+    <a href="/targetWeek/<%= year %>"> <%= year %></a>
+
+    <% } %> <% }) %> <%- include('./partials/footer.ejs') %>
   </body>
 </html>
