--- a/views/targetWeek.ejs
+++ b/views/targetWeek.ejs
@@ -6,7 +6,7 @@
 
   <body>
     <%- include('./partials/header.ejs') %>
-    <h2><%=`Week ${targetWeek}` %></h2>
+    <h2><%=`Week ${week}` %></h2>
     <button type="button" class="open-modal">Add new note</button>
     <dialog class="modal">
       <form action="/note/newNote" method="POST">
@@ -27,13 +27,30 @@
         <button type="button" class="close-modal">close modal</button>
       </form>
     </dialog>
-    <ul>
-      <li>TAGS: <% notes.forEach(note => { %> <%= note.tagInput %> <% }) %></li>
-    </ul>
+    <form class="search-form" method="POST">
+      <fieldset class="filter-tags">
+        <legend>Click tags to search</legend>
+        <ul>
+          <li>
+            <% fullTagsArray.forEach(item => { %>
+            <label for="label-button" class="label-button" value="<%= item %>"
+              ><%= item %></label
+            >
+            <input
+              type="checkbox"
+              id="label-button"
+              class="filter-checkbox"
+              name="searchTags"
+              value="<%= item %>"
+            />
+            <% }) %>
+          </li>
+        </ul>
+      </fieldset>
+    </form>
 
     <ul>
-      <% notes.forEach(note => { %> <% if(note.weekNumber ===
-      Number(targetWeek)) {%>
+      <% notes.forEach(note => { %> <% if(note.weekNumber === Number(week)) {%>
       <li data-id="<%= note._id %>">
         <div>TITLE: <%= note.headerInput %></div>
         <div>TAGS: <%= note.tagInput %></div>
