--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,5 +2,5 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Notewood</title>
-<link rel="stylesheet" href="styles/styles.css" />
-<script src="js/main.js" type="module" defer></script>
+<link rel="stylesheet" href="/styles/styles.css" />
+<script src="/js/main.js" type="module" defer></script>
