--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -2,6 +2,10 @@
 @use "./components/note";
 @use "./components/label";
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .hidden {
   display: none;
 }
