--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -5,7 +5,8 @@
   </head>
 
   <body>
-    <%- include('./partials/header.ejs') %>
+    <%- include('./partials/header.ejs', {yearWeek: yearWeek, currentWeek:
+    currentWeek}) %>
 
     <ul>
       <% groupedEmailsArray.forEach(note => { %>
