--- a/views/note.ejs
+++ b/views/note.ejs
@@ -5,7 +5,8 @@
   </head>
 
   <body>
-    <%- include('./partials/header.ejs') %>
+    <%- include('./partials/header.ejs', {yearWeek: yearWeek, currentWeek:
+    currentWeek}) %>
     <ul>
       <li data-id="<%= notes._id %>">
         <div>TITLE: <%= notes.headerInput %></div>
