create View class component

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -70,3 +70,25 @@ body {
 .hidden {
   display: none;
 }
+
+.select-view {
+  height: 100%; /* 100% Full-height */
+  width: 0px; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  right: 0;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+.select-view ul li a {
+  padding: 8px 8px 32px 32px;
+  margin: 1em 0;
+  text-decoration: none;
+  font-size: 16px;
+  color: #818181;
+  display: inline-block;
+  transition: 0.3s;
+}
