--- a/views/currentWeek.ejs
+++ b/views/currentWeek.ejs
@@ -20,7 +20,7 @@
           cols="30"
           rows="10"
         ></textarea>
-        <label for="tagInput">Input tags</label>
+        <label for="tagInput">Press space to add tag</label>
         <input type="text" id="tagInput" name="tagInput" />
         <label for="weekNumber">Input date</label>
         <input type="date" id="weekNumber" name="weekNumber" />
