fix archive page

--- a/public/styles/components/_note.scss
+++ b/public/styles/components/_note.scss
@@ -2,6 +2,7 @@
   list-style: none;
   padding: 0;
   display: flex;
+  flex-flow: row wrap;
   li {
     max-width: fit-content;
     border: 1px solid black;
