--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -26,6 +26,7 @@
   list-style: none;
   padding: 0;
   display: flex;
+  flex-flow: row wrap;
 }
 .note-item li {
   max-width: fit-content;
@@ -91,4 +92,46 @@ body {
   color: #818181;
   display: inline-block;
   transition: 0.3s;
+}
+
+.input-wrap {
+  border: 1px #888 solid;
+  border-radius: 5px;
+  display: flex;
+  margin: 1.5em 0;
+}
+.input-wrap input {
+  background: none;
+  border: none;
+  padding: 0.5em;
+  width: 100%;
+}
+.input-wrap input:focus {
+  outline: none;
+}
+.input-wrap span {
+  margin: 0 0.5em 0 0.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #888;
+}
+
+.tag {
+  background: #f1f1f1;
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  display: inline-block;
+  margin: 0.2em;
+}
+.tag span {
+  font-size: 0.8em;
+  cursor: pointer;
+}
+.tag b {
+  padding-bottom: 1em;
+}
+
+.tags {
+  margin-bottom: 1.5em;
 }
