--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -35,3 +35,49 @@ body {
     }
   }
 }
+
+.input-wrap {
+  border: 1px #888 solid;
+  border-radius: 5px;
+  display: flex;
+  margin: 1.5em 0;
+
+  input {
+    background: none;
+    border: none;
+    padding: 0.5em;
+    width: 100%;
+
+    &:focus {
+      outline: none;
+    }
+  }
+  span {
+    margin: 0 0.5em 0 0.2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #888;
+  }
+}
+
+.tag {
+  background: #f1f1f1;
+  border-radius: 5px;
+  padding: 0.2em 0.5em;
+  display: inline-block;
+  margin: 0.2em;
+
+  span {
+    font-size: 0.8em;
+    cursor: pointer;
+  }
+
+  b {
+    padding-bottom: 1em;
+  }
+}
+
+.tags {
+  margin-bottom: 1.5em;
+}
